Fix CSS : Align center button

--- a/src/app/frais/liste-frais/liste-frais.component.css
+++ b/src/app/frais/liste-frais/liste-frais.component.css
@@ -29,11 +29,11 @@
 	}
 
 	.col1 {
-		flex-basis: 10%;
+		flex-basis: 15%;
 	}
 
 	.col2 {
-		flex-basis: 25%;
+		flex-basis: 20%;
 	}
 
 	.col3 {
@@ -42,6 +42,7 @@
 
 	.col4 {
 		flex-basis: 25%;
+		text-align: center;
 	}
 
 	@media all and (max-width: 767px) {
@@ -81,4 +82,5 @@
 	color: #fff;
 	padding: 8px;
 	background-color: rgba(144, 140, 170, 0.95);
+	margin: 0 auto;
   }
